\name{NEWS}
\title{News for Package 'rkwarddev'}
\encoding{UTF-8}
\section{Changes in rkwarddev version 0.07-4 (2015-11-08)}{
  \subsection{unreleased}{
    \itemize{
      \item this version is under development
    }
  }
  \subsection{fixed}{
    \itemize{
      \item attribute \code{"max_precision"} in <spinbox> was misspelled
      \item \code{rk.XML.connect()} still handled modifiers for \code{"governor"} wrong if it
        wasn't a XiMpLe node
      \item also fixed how \code{rk.XML.convert()} and \code{rk.XML.switch()} were handling
        modifier checking
      \item \code{rk.XML.dependencies()} didn't know about min/max versions of pluginmaps
        (fixed in \code{rk.XML.about()} as well)
      \item some fixes to the skeleton GUI and demo script
    }
  }
  \subsection{added}{
    \itemize{
      \item new methods \code{plugin2script()} to try to translate raw plugin XML into
        working rkwarddev script calls
      \item new option \code{"ignore"} enables \code{rk.uniqueIDs()} to not check nodes for
        duplicates (e.g., <copy>)
      \item new wrapper function \code{js()} for \code{id()} makes it possible to use several
        operators without quoting, preserve \code{"if"} conditions and \code{"for"} loops, which all
        will be translated to JavaScript equivalents without the need for quoting.
        however, the \code{"for"} loop code is not publicly documented and remains a
        proof of concept kind of thing for now
      \item new option \code{".objects"} in \code{id()} to provide objects as a list
      \item new option \code{"rk.JS.vars"} to make JS variables match the name of the
        original R object
    }
  }
  \subsection{changed}{
    \itemize{
      \item improved error handling in \code{rk.JS.header()}, error messages are more
        informative now
      \item \code{rk.uniqueIDs()} now checks \code{"dialog"} and \code{"wizard"} sections separately