@@ -16,7 +16,7 @@ LazyLoad: yes
 URL: https://rkward.kde.org
 Authors@R: c(person(given="m.eik", family="michalke", email="meik.michalke@hhu.de", role=c("aut", "cre")))
 Version: 0.07-4
-Date: 2015-11-08
+Date: 2015-11-09
 RoxygenNote: 5.0.0
 Collate:
     '00_class_01_rk.JS.arr.R'
